--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "tdp_matomo",
   "description": "Matomo tracking for TDP applications",
   "homepage": "https://datavisyn.io",
-  "version": "1.0.0-SNAPSHOT",
+  "version": "1.0.0",
   "author": {
-    "name": "Datavisyn GmbH",
+    "name": "datavisyn GmbH",
     "email": "contact@datavisyn.io",
     "url": "https://datavisyn.io"
   },
@@ -108,6 +108,6 @@
     "ts-loader": "4.0.1"
   },
   "dependencies": {
-    "tdp_core": "github:datavisyn/tdp_core#develop"
+    "tdp_core": "github:datavisyn/tdp_core#semver:^5.2.0"
   }
 }
