--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "tdp_matomo",
   "description": "Matomo tracking for TDP applications",
   "homepage": "https://datavisyn.io",
-  "version": "1.0.0",
+  "version": "1.0.1-SNAPSHOT",
   "author": {
     "name": "datavisyn GmbH",
     "email": "contact@datavisyn.io",
@@ -108,6 +108,6 @@
     "ts-loader": "4.0.1"
   },
   "dependencies": {
-    "tdp_core": "github:datavisyn/tdp_core#semver:^5.2.0"
+    "tdp_core": "github:datavisyn/tdp_core#develop"
   }
 }
