Add option to encrypt user names
Fix #4

--- a/tdp_matomo/config.json
+++ b/tdp_matomo/config.json
@@ -1,6 +1,7 @@
 {
   "matomo": {
     "url": "", // matomo url with a trailing slash
-    "site": "1"
+    "site": "1",
+    "encryptUserName": false
   }
 }
