--- a/package.json
+++ b/package.json
@@ -108,6 +108,7 @@
     "ts-loader": "4.0.1"
   },
   "dependencies": {
+    "crypto-js": "^3.1.9-1",
     "tdp_core": "github:datavisyn/tdp_core#develop"
   }
 }
