--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "tdp_matomo",
   "description": "Matomo tracking for TDP applications",
   "homepage": "https://datavisyn.io",
-  "version": "1.0.1-SNAPSHOT",
+  "version": "2.0.0",
   "author": {
     "name": "datavisyn GmbH",
     "email": "contact@datavisyn.io",
