--- a/package.json
+++ b/package.json
@@ -109,6 +109,6 @@
   },
   "dependencies": {
     "crypto-js": "^3.1.9-1",
-    "tdp_core": "github:datavisyn/tdp_core#develop"
+    "tdp_core": "github:datavisyn/tdp_core#semver:^5.4.1"
   }
 }
