--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "tdp_matomo",
   "description": "Matomo tracking for TDP applications",
   "homepage": "https://datavisyn.io",
-  "version": "2.0.0",
+  "version": "2.0.1-SNAPSHOT",
   "author": {
     "name": "datavisyn GmbH",
     "email": "contact@datavisyn.io",
@@ -109,6 +109,6 @@
   },
   "dependencies": {
     "crypto-js": "^3.1.9-1",
-    "tdp_core": "github:datavisyn/tdp_core#semver:^5.5.0"
+    "tdp_core": "github:datavisyn/tdp_core#develop"
   }
 }
