--- a/.yo-rc.json
+++ b/.yo-rc.json
@@ -8,7 +8,7 @@
     "libraryAliases": {},
     "libraryExternals": [],
     "name": "tdp_matomo",
-    "author": "Datavisyn GmbH",
+    "author": "datavisyn",
     "today": "Tue, 16 Jul 2019 09:22:25 GMT",
     "githubAccount": "datavisyn",
     "sextensions": [],
