unify _package.json_

--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
   "name": "tdp_matomo",
   "description": "Matomo tracking for TDP applications",
-  "homepage": "https://datavisyn.io",
   "version": "2.0.1-SNAPSHOT",
   "author": {
-    "name": "datavisyn GmbH",
+    "name": "datavisyn",
     "email": "contact@datavisyn.io",
     "url": "https://datavisyn.io"
   },
