--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": {
     "name": "datavisyn",
     "email": "contact@datavisyn.io",
-    "url": "https://datavisyn.io"
+    "url": "https://www.datavisyn.io"
   },
   "license": "BSD-3-Clause",
   "bugs": {
