Update template files and dependencies
Using generator-phovea v3.0.0

- Use Node.js v12
- Update to TypeScript 2.8.1
- Update CircleCI config
- Update dev dependencies
- Udpate webpack.config.js
- Update buildInfo.js

--- a/.yo-rc.json
+++ b/.yo-rc.json
@@ -18,6 +18,12 @@
     },
     "entries": "./index.js",
     "ignores": [],
-    "extensions": []
+    "extensions": [],
+    "promptValues": {
+      "authorName": "datavisyn",
+      "authorEmail": "contact@datavisyn.io",
+      "authorUrl": "https://www.datavisyn.io",
+      "githubAccount": "datavisyn"
+    }
   }
 }
