--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "tdp_matomo",
   "description": "Matomo tracking for TDP applications",
   "version": "2.0.1-SNAPSHOT",
+  "homepage": "https://www.datavisyn.io",
   "author": {
     "name": "datavisyn",
     "email": "contact@datavisyn.io",
@@ -39,7 +40,7 @@
     "predist": "echo hybrid",
     "dist": "npm run dist:web && npm run dist:python",
     "compile": "tsc",
-    "lint": "tslint -c tslint.json -p .",
+    "lint": "tslint -c tslint.json -p . 'src/**/*.ts?(x)' 'tests/**/*.ts?(x)'",
     "posttest": "echo hybrid",
     "test:watch": "karma start --autoWatch=true --singleRun=false",
     "build:dev": "webpack",
@@ -63,19 +64,22 @@
     "predist:web": "npm run build:web && npm run docs:web",
     "predist:python": "npm run build:python && npm run docs:python",
     "dist:web": "mkdirp dist && cd build && tar cvzf ../dist/tdp_matomo.tar.gz *",
-    "dist:python": "python setup.py bdist_egg"
+    "dist:python": "python setup.py sdist bdist_wheel"
   },
   "engines": {
-    "npm": ">= 3",
-    "node": ">= 6"
+    "npm": ">= 6.12",
+    "node": ">= 12.13"
   },
   "devDependencies": {
     "@types/jasmine": "2.5.47",
     "awesome-typescript-loader": "3.1.2",
+    "cache-loader": "1.2.0",
     "css-loader": "0.28.0",
-    "extract-loader": "0.1.0",
     "extract-text-webpack-plugin": "2.1.0",
+    "extract-loader": "0.1.0",
+    "ifdef-loader": "2.0.0",
     "file-loader": "0.11.1",
+    "fork-ts-checker-webpack-plugin": "0.4.1",
     "html-loader": "0.4.5",
     "imports-loader": "0.7.1",
     "jasmine": "2.5.3",
@@ -93,18 +97,15 @@
     "raw-loader": "0.5.1",
     "sass-loader": "6.0.7",
     "style-loader": "0.16.1",
+    "thread-loader": "1.1.2",
+    "ts-loader": "4.0.1",
     "tslib": "1.9.0",
     "tslint": "5.9.1",
     "typedoc": "0.11.1",
-    "typescript": "2.7.2",
+    "typescript": "2.8.1",
     "url-loader": "0.5.8",
     "webpack": "2.3.3",
-    "webpack-dev-server": "2.4.2",
-    "cache-loader": "1.2.0",
-    "ifdef-loader": "2.0.0",
-    "fork-ts-checker-webpack-plugin": "0.4.1",
-    "thread-loader": "1.1.2",
-    "ts-loader": "4.0.1"
+    "webpack-dev-server": "2.4.2"
   },
   "dependencies": {
     "crypto-js": "^3.1.9-1",
