--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,7 +24,7 @@ jobs:
       #     key: deps3-{{ .Branch }}-{{ checksum "package.json" }}
       - run:
           name: Install npm dependencies
-          command: npm install
+          command: npm install --cache /tmp/empty-cache
       # - run:
       #     name: Remove npm dependencies installed from git repositories (avoid caching of old commits)
       #     command: |
