--- a/package.json
+++ b/package.json
@@ -71,7 +71,7 @@
     "node": ">= 12.13"
   },
   "dependencies": {
-    "crypto-js": "^3.1.9-1",
+    "crypto-js": "^4.0.0",
     "tdp_core": "github:datavisyn/tdp_core#update_dependencies_38"
   },
   "devDependencies": {
