--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,1 @@
--e git+https://github.com/datavisyn/tdp_core.git@v9.0.0#egg=tdp_core
+-e git+https://github.com/datavisyn/tdp_core.git@develop#egg=tdp_core
