--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "4.0.1-SNAPSHOT",
   "homepage": "https://www.datavisyn.io",
   "author": {
-    "name": "datavisyn",
+    "name": "datavisyn GmbH",
     "email": "contact@datavisyn.io",
     "url": "https://www.datavisyn.io"
   },
