--- a/package.json
+++ b/package.json
@@ -16,13 +16,14 @@
     "type": "git",
     "url": "git@github.com:datavisyn/tdp_matomo.git"
   },
-  "main": "build/tdp_matomo.js",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "files": [
     "src",
     "index.js",
     "phovea.js",
     "phovea_registry.js",
-    "build",
+    "dist",
     "tdp_matomo",
     "__init__.py",
     "__main__.py",
@@ -31,7 +32,7 @@
     "docker_packages.txt"
   ],
   "scripts": {
-    "clean": "rimraf build dist && npm run clean:compile",
+    "clean": "rimraf dist lib && npm run clean:compile",
     "clean:compile": "rimraf src/**/*.map src/**/*.js src/**/*.d.ts tests/**/*.js tests/**/*.map tests/**/*.d.ts demo/**/*.js demo/**/*.map demo/**/*.d.ts",
     "check": "flake8 --exclude=.git,venv,deploy,docs,__pycache__,node_modules",
     "pretest": "echo hybrid",
@@ -45,10 +46,9 @@
     "lint": "tslint -c tslint.json -p . 'src/**/*.ts?(x)' 'tests/**/*.ts?(x)'",
     "posttest": "echo hybrid",
     "test:watch": "jest --watch",
-    "build:dev": "webpack",
-    "start": "webpack-dev-server --inline",
-    "start:hot": "webpack-dev-server --inline --hot",
-    "watch": "webpack --watch",
+    "build:web": "npm run clean && npm run compile && npm run copy-assets && npm run copy-styles",
+    "copy-assets": "if [ -d src/assets ]; then cp -rv src/assets/ dist/assets/; fi",
+    "copy-styles": "cd src && find . -name '*.scss' -exec cp --parents '{}' ./../dist/ ';'",
     "release:major": "npm version major && npm publish && git push --follow-tags",
     "release:minor": "npm version minor && npm publish && git push --follow-tags",
     "release:patch": "npm version patch && npm publish && git push --follow-tags",
@@ -62,10 +62,9 @@
     "prebuild:python": "node -e \"process.exit(process.env.PHOVEA_SKIP_TESTS === undefined?1:0)\" || npm run test:python",
     "prebuild:web": "node -e \"process.exit(process.env.PHOVEA_SKIP_TESTS === undefined?1:0)\" || npm run test:web",
     "build:python": "rm -rf build/source && find . -name '*.pyc' -delete && node buildPython.js && cp -r ./tdp_matomo build/source/",
-    "build:web": "webpack --env prod",
     "predist:web": "npm run build:web && npm run docs:web",
     "predist:python": "npm run build:python && npm run docs:python",
-    "dist:web": "mkdir dist && cd build && tar cvzf ../dist/tdp_matomo.tar.gz *",
+    "dist:web": "mkdir lib && cd dist && tar cvzf ../lib/tdp_matomo.tar.gz *",
     "dist:python": "python setup.py sdist bdist_wheel"
   },
   "engines": {
@@ -78,35 +77,23 @@
   },
   "devDependencies": {
     "@types/jest": "25.1.4",
-    "awesome-typescript-loader": "3.1.2",
-    "cache-loader": "1.2.0",
-    "css-loader": "0.28.0",
-    "extract-text-webpack-plugin": "2.1.0",
     "extract-loader": "0.1.0",
     "identity-obj-proxy": "^3.0.0",
     "ifdef-loader": "2.0.0",
     "file-loader": "0.11.1",
-    "fork-ts-checker-webpack-plugin": "0.4.4",
     "html-loader": "0.4.5",
     "imports-loader": "0.7.1",
     "jest": "25.1.0",
     "jest-raw-loader": "1.0.1",
-    "json-loader": "0.5.4",
     "node-sass": "^4.13.1",
     "null-loader": "0.1.1",
     "raw-loader": "0.5.1",
     "rimraf": "^3.0.0",
-    "sass-loader": "6.0.7",
-    "style-loader": "0.16.1",
-    "thread-loader": "1.1.2",
-    "ts-loader": "4.0.1",
     "tslib": "~1.11.0",
     "tslint": "5.9.1",
     "ts-jest": "25.2.1",
     "typedoc": "~0.16.10",
     "typescript": "~3.8.2",
-    "url-loader": "0.5.8",
-    "webpack": "2.3.3",
-    "webpack-dev-server": "2.4.2"
+    "url-loader": "0.5.8"
   }
 }
