update config files

--- a/package.json
+++ b/package.json
@@ -20,8 +20,6 @@
   "types": "dist/index.d.ts",
   "files": [
     "src",
-    "index.js",
-    "phovea.js",
     "phovea_registry.js",
     "dist",
     "tdp_matomo",
@@ -47,14 +45,13 @@
     "posttest": "echo hybrid",
     "test:watch": "jest --watch",
     "build:web": "npm run clean && npm run compile && npm run copy-assets && npm run copy-styles",
-    "copy-assets": "if [ -d src/assets ]; then cp -rv src/assets/ dist/assets/; fi",
-    "copy-styles": "cd src && find . -name '*.scss' -exec cp --parents '{}' ./../dist/ ';'",
+    "copy-assets": "if [ -d src/assets ]; then shx --verbose cp -R src/assets/. dist/assets/; fi",
+    "copy-styles": "if [ -d src/scss ]; then shx --verbose cp -R src/scss/. dist/scss/; fi",
     "release:major": "npm version major && npm publish && git push --follow-tags",
     "release:minor": "npm version minor && npm publish && git push --follow-tags",
     "release:patch": "npm version patch && npm publish && git push --follow-tags",
     "docs:web": "typedoc --options typedoc.json src/**.ts",
     "docs:python": "sphinx-apidoc -o docs -f ./tdp_matomo && sphinx-build ./docs build/docs",
-    "pretest:web": "npm run compile",
     "pretest:python": "npm run check",
     "posttest:web": "npm run lint",
     "test:web": "test ! $(find tests -name \"*.ts\") || jest",
@@ -77,23 +74,15 @@
   },
   "devDependencies": {
     "@types/jest": "25.1.4",
-    "extract-loader": "0.1.0",
     "identity-obj-proxy": "^3.0.0",
-    "ifdef-loader": "2.0.0",
-    "file-loader": "0.11.1",
-    "html-loader": "0.4.5",
-    "imports-loader": "0.7.1",
     "jest": "25.1.0",
     "jest-raw-loader": "1.0.1",
-    "node-sass": "^4.13.1",
-    "null-loader": "0.1.1",
-    "raw-loader": "0.5.1",
     "rimraf": "^3.0.0",
+    "shx": "^0.3.2",
     "tslib": "~1.11.0",
     "tslint": "5.9.1",
     "ts-jest": "25.2.1",
     "typedoc": "~0.16.10",
-    "typescript": "~3.8.2",
-    "url-loader": "0.5.8"
+    "typescript": "~3.8.2"
   }
 }
