--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "tdp_matomo",
   "description": "Matomo tracking for TDP applications",
-  "version": "4.0.1-SNAPSHOT",
+  "version": "5.0.0",
   "homepage": "https://www.datavisyn.io",
   "author": {
     "name": "datavisyn GmbH",
@@ -73,7 +73,7 @@
   },
   "dependencies": {
     "crypto-js": "^4.0.0",
-    "tdp_core": "github:datavisyn/tdp_core#develop"
+    "tdp_core": "github:datavisyn/tdp_core#semver:^10.0.1"
   },
   "devDependencies": {
     "@types/jest": "~26.0.5",
