--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,1 @@
--e git+https://github.com/datavisyn/tdp_core.git@vstoiber/update_requirements#egg=tdp_core
+-e git+https://github.com/datavisyn/tdp_core.git@develop#egg=tdp_core
