--- a/package.json
+++ b/package.json
@@ -72,10 +72,11 @@
     "node": ">= 12.13"
   },
   "dependencies": {
-    "crypto-js": "^4.0.0",
+    "md5": "^2.3.0",
     "tdp_core": "github:datavisyn/tdp_core#bootstrap-v4"
   },
   "devDependencies": {
+    "@types/md5": "^2.3.0",
     "@types/jest": "~26.0.20",
     "identity-obj-proxy": "~3.0.0",
     "jest": "~26.6.3",
