--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "tdp_matomo",
   "description": "Matomo tracking for TDP applications",
-  "version": "5.0.1-SNAPSHOT",
+  "version": "7.0.0-alpha.0",
   "homepage": "https://www.datavisyn.io",
   "author": {
     "name": "datavisyn GmbH",
@@ -73,7 +73,7 @@
   },
   "dependencies": {
     "md5": "^2.3.0",
-    "tdp_core": "github:datavisyn/tdp_core#bootstrap-v4"
+    "tdp_core": "12.0.0-alpha.0"
   },
   "devDependencies": {
     "@types/md5": "^2.3.0",
